--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- fix: 1..intro, .concat 的部分建議可以使用相對於 .header 的方式做絕對定位 -->
         <div class="header">
             <div class="intro">
-                <img src="images/photo.png" alt="photo" class="photo" width="151px" height="151px">
+                <img src="images/photo.jpg" alt="photo" class="photo" width="151px" height="180px">
                 <h1>藍鵑秀</h1>
                 <p>Jessie<br />Front-End Developer</p>
             </div>
@@ -62,8 +62,8 @@
                         <ul class="desc">
                             <li>RWD + Sass</li>
                             <li>Boostrap 3</li>
-                            <li>FB pixel、schema.org</li>
-                            <li>大型電子商務版型規劃經驗 (2 years）</li>
+                            <li>pug</li>
+                            <li>切版經驗 (1 years）</li>
                         </ul>
                         <!-- <p>
                             • RWD + Sass<br />
@@ -76,12 +76,12 @@
                     </li>
                     <li class="skill-js">
                         <img src="images/img-skill-icon-2.png" alt="skill-js" width="92px" height="76px">
-                        <h3>JavaScript & Node.js</h3>
+                        <h3>JavaScript & TypeScript</h3>
                         <ul class="desc">
-                            <li>jQuery animation</li>
+                            <li>angular 2+ (1 years)</li>
                             <li>AJAX/JSON 3</li>
                             <li>Vue.js (1 years)</li>
-                            <li>Node.js / express</li>
+                            <li>TypeScript</li>
                         </ul>
                         <!-- <p>
                             • jQuery animation<br />
@@ -96,9 +96,9 @@
                         <h3>Dev Helper</h3>
                         <ul class="desc">
                             <li>Git / Github</li>
-                            <li>Heroku / AWS EC2、S3</li>
+                            <li>CI / CD</li>
                             <li>gulp / webpack</li>
-                            <li>介接歐付寶、玉山銀行金流經驗</li>
+                            <li>串接api</li>
                         </ul>
                         <!-- <p>
                             • Git / Github<br />
