fix all.css and template

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="clearfix"></div>
             </div>
 
-            <!-- fix: 4..expSectionBold 所有區塊都以相對於 .expSectionBold 做絕對定位排版，日後很難維護網站，例如可將 .dotTimeItem1 以相對於 .exp2 做絕對定位排版，日後區塊內容增加時，不需更動所有元素定位
+            <!-- fix: 4..expSectionBold 所有區塊都以相對於 .expSectionBold 做絕對定位排版，日後很難維護網站，例如可將 .dotTime-hex 以相對於 .exp-hex 做絕對定位排版，日後區塊內容增加時，不需更動所有元素定位
 5.建議將 HTML 元素以排版順序來排序，結構較符合邏輯 -->
             <div class="exp">
                 <h2>Experience</h2>
@@ -121,23 +121,29 @@
                     <div class="exp-hex">
                         <img src="images/dot-timeItem.png" class="dotTime-hex" alt="dot-timeItem" width="24px"
                             height="28px">
-                        <p><span>2016/01 - Present</span><br /><span class="redFont">Web Developer
-                                資深工程師</span><br />六角超有創意有限公司<br />Implemented a system for
-                            creating campaign landing pages from the CMS.</p>
+                        <div class="hex-section">
+                            <p><span>2016/01 - Present</span><br /><span class="redFont">Web Developer
+                                    資深工程師</span><br />六角超有創意有限公司<br />Implemented a system for
+                                creating campaign landing pages from the CMS.</p>
+                        </div>
                     </div>
                     <div class="exp-sweet">
                         <img src="images/dot-timeItem.png" class="dotTime-sweet" alt="dot-timeItem" width="24px"
                             height="28px">
-                        <p><span>2015/03 - 2015/06</span><br /><span class="redFont">Web
-                                Developer軟體工程師</span><br />甜點資訊開發股份有限公司<br />Implemented a system for
-                            creating campaign landing pages from the CMS.</p>
+                        <div class="sweet-section">
+                            <p><span>2015/03 - 2015/06</span><br /><span class="redFont">Web
+                                    Developer軟體工程師</span><br />甜點資訊開發股份有限公司<br />Implemented a system for
+                                creating campaign landing pages from the CMS.</p>
+                        </div>
                     </div>
                     <div class="exp-front">
                         <img src="images/dot-timeItem.png" class="dotTime-front" alt="dot-timeItem" width="24px"
                             height="28px">
-                        <p><span>2010/01 - 2015/3</span><br /><span class="redFont">Web Developer
-                                網頁工程師</span><br />前端無極限有限公司<br />Implemented a system for
-                            creating campaign landing pages from the CMS.<p>
+                        <div class="front-section">
+                            <p><span>2010/01 - 2015/3</span><br /><span class="redFont">Web Developer
+                                    網頁工程師</span><br />前端無極限有限公司<br />Implemented a system for
+                                creating campaign landing pages from the CMS.<p>
+                        </div>
                     </div>
                     <!-- <img src="images/dot-start.png" class="dotStart" alt="" width="32px" height="37px"> -->
                     <!-- <img src="images/dot-timeItem.png" class="dotTimeItem1" alt="" width="24px" height="28px"> -->
