--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- fix: 1..intro, .concat 的部分建議可以使用相對於 .header 的方式做絕對定位 -->
         <div class="header">
             <div class="intro">
-                <img src="images/photo.jpg" alt="photo" class="photo" width="151px" height="180px">
+                <img src="images/photo.jpg" alt="photo" class="photo" width="151px" height="190px">
                 <h1>藍鵑秀</h1>
                 <p>Jessie<br />Front-End Developer</p>
             </div>
@@ -43,7 +43,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" target="_blank" title="連到github">
+                    <a href="https://github.com/JessieRabbit" target="_blank" title="連到github">
                         <img src="images/icon-github.png" alt="github" width="32px" height="31px">
                         ChengSiou
                     </a>
@@ -61,9 +61,9 @@
                         <!-- fix: 6..skill p 列表建議改用 ul li 來呈現，前面的圓點可使用 list-style: disc 來表示 -->
                         <ul class="desc">
                             <li>RWD + Sass</li>
-                            <li>Boostrap 3</li>
+                            <li>HTML</li>
                             <li>pug</li>
-                            <li>切版經驗 (1 years）</li>
+                            <li>後台與前台功能實作經驗 (1 years半）</li>
                         </ul>
                         <!-- <p>
                             • RWD + Sass<br />
@@ -78,9 +78,9 @@
                         <img src="images/img-skill-icon-2.png" alt="skill-js" width="92px" height="76px">
                         <h3>JavaScript & TypeScript</h3>
                         <ul class="desc">
-                            <li>angular 2+ (1 years)</li>
-                            <li>AJAX/JSON 3</li>
-                            <li>Vue.js (1 years)</li>
+                            <li>angular 2+ (1 years半)</li>
+                            <li>AJAX / JSON</li>
+                            <li>RxJS</li>
                             <li>TypeScript</li>
                         </ul>
                         <!-- <p>
@@ -122,27 +122,24 @@
                         <img src="images/dot-timeItem.png" class="dotTime-hex" alt="dot-timeItem" width="24px"
                             height="28px">
                         <div class="hex-section">
-                            <p><span>2016/01 - Present</span><br /><span class="redFont">Web Developer
-                                    資深工程師</span><br />六角超有創意有限公司<br />Implemented a system for
-                                creating campaign landing pages from the CMS.</p>
+                            <p><span>2018/01 - 2019/06</span><br /><span class="redFont">Front-End Developer
+                                </span><br />飛騰資訊<br />體育投注前端開發與切版，使用敏捷開發與佈署環境，節省開發時間</p>
                         </div>
                     </div>
                     <div class="exp-sweet">
                         <img src="images/dot-timeItem.png" class="dotTime-sweet" alt="dot-timeItem" width="24px"
                             height="28px">
                         <div class="sweet-section">
-                            <p><span>2015/03 - 2015/06</span><br /><span class="redFont">Web
-                                    Developer軟體工程師</span><br />甜點資訊開發股份有限公司<br />Implemented a system for
-                                creating campaign landing pages from the CMS.</p>
+                            <p><span>2017/03 - 2017/06</span><br /><span class="redFont">RD 網頁前端工程師
+                                </span><br />文華資訊<br />包網平台開發與串接api</p>
                         </div>
                     </div>
                     <div class="exp-front">
                         <img src="images/dot-timeItem.png" class="dotTime-front" alt="dot-timeItem" width="24px"
                             height="28px">
                         <div class="front-section">
-                            <p><span>2010/01 - 2015/3</span><br /><span class="redFont">Web Developer
-                                    網頁工程師</span><br />前端無極限有限公司<br />Implemented a system for
-                                creating campaign landing pages from the CMS.<p>
+                            <p><span>2015/09 - 2017/02</span><br /><span
+                                    class="redFont">遊戲程式設計師</span><br />唯晶數位<br />遊戲客戶端程式開發和後台工具開發<p>
                         </div>
                     </div>
                     <!-- <img src="images/dot-start.png" class="dotStart" alt="" width="32px" height="37px"> -->
@@ -157,26 +154,30 @@
                 <h2 class="worksFont">Works 作品</h2>
                 <ul>
                     <li class="code-work">
-                        <div>
-                            <img src="images/logo-work-1.png" alt="code-work" width="207px" height="114px">
-                        </div>
-                        <span>Works 1 title</span>
-                        <p>Lorem ipsum dolor sit amet</p>
+                        <a href="https://m-cali5.b2.b5k.io/login" target="_blank">
+                            <div>
+                                <img src="images/cali_logo_big.png" alt="code-work" width="280px" height="150px">
+                            </div>
+                            <span>飛騰體育投注手機板</span>
+                            <p>製作盤表、注單、賽果...等所有頁面</p>
+                        </a>
                     </li>
                     <!-- fix: 請盡量減少方向性、編號式的命名方式，改用語意的方式來取代，例如 .work2 的部分 bmi-work -->
                     <li class="bmi-work">
-                        <div>
-                            <img src="images/logo-work-2.png" alt="bmi-work" width="80px" height="80px">
-                        </div>
-                        <span>Works 2 title</span>
-                        <p>Lorem ipsum dolor sit amet</p>
+                        <a href="https://op.b2.b5k.io/login" target="_blank">
+                            <div>
+                                <img src="images/logo-work-Bkmobile.png" alt="bmi-work" width="280px" height="150px">
+                            </div>
+                            <span>體育投注控台</span>
+                            <p>製作賽果、注單頁面與即時注單socket</p>
+                        </a>
                     </li>
                     <li class="excel-work">
                         <div>
-                            <img src="images/logo-work-3.png" alt="excel-work" width="80px" height="80px">
+                            <img src="images/logo-work-Bkweb.png" alt="excel-work" width="280px" height="150px">
                         </div>
-                        <span>Works 3 title</span>
-                        <p>Lorem ipsum dolor sit amet</p>
+                        <span>BetLink體育投注</span>
+                        <p>盤表4種切換、帳目</p>
                     </li>
                 </ul>
                 <div class="clearfix"></div>
@@ -186,10 +187,11 @@
             <h2>About 藍鵑秀</h2>
             <div class="aboutPhoto"></div>
             <p>
-                具有八年的網頁開發以及介面設計經驗，在 Github 上參與數個開源專案，熟悉原生JavaScript EM6 開發，以及 VueJS, reactJS
-                等前端框架。盡為受。幾業本造意當子二，方火動李方然他。住小科登務如卻。後洋一如線達告子喜港友變目不族風西排書終小學：年辦行中夫輪中詩的國、組上會隨可冷灣的進和有是不信使成因給？
+                感謝貴公司百忙之中閱讀這份自製網頁履歷，我的名字叫藍鵑秀，2018年1月開始就職飛騰資訊擔任Front-End，且2017年3月任職文華資訊Front-End。展開Front-End之路前，並在2014~2017年在遊戲業擔任遊戲程式設計師，具有4年半工作經歷且6年程式設計經驗。
                 <br /><br />
-                作而上不選現該時業、公準間在持我天本見連國問轉技雜和據果股會們病觀利學……子照自充則生好國夠用原行增發狀難樓新起為對時我生比：使色最交傳，的設學，作夠門友調管更張奇了覺有結畫會單公！
+                開發這條路上，歷練無數個開發的流程與知識，具備程式碼專注品質且獨立自己凡事尋找資源的能力。<br />
+                在團隊合作中，喜歡和同事交流技術的知識與學習他人擅長的技能，培養人與人之間的信任與溝通。<br />
+                自己會喜歡研究學習其他framework與技術，讓自己除了專精一個項目必須還要多了解其他的知識。
             </p>
             <div class="clearfix"></div>
         </div>
