feat: add resume company

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="intro">
                 <img src="images/photo.jpg" alt="photo" class="photo" width="151px" height="190px">
                 <h1>藍鵑秀</h1>
-                <p>Jessie<br />Front-End Developer</p>
+                <p>Jessie<br />Senior Front-End Developer</p>
             </div>
             <!-- <div class="concat"> -->
             <!-- fix: 2.concat 樣式可以寫到裡面的 ul 上，減少 div 的使用可以讓網頁更簡潔 -->
@@ -63,7 +63,7 @@
                             <li>RWD + Sass</li>
                             <li>HTML</li>
                             <li>pug</li>
-                            <li>後台與前台功能實作經驗 (1 years半）</li>
+                            <li>後台與前台功能實作經驗</li>
                         </ul>
                         <!-- <p>
                             • RWD + Sass<br />
@@ -78,7 +78,7 @@
                         <img src="images/img-skill-icon-2.png" alt="skill-js" width="92px" height="76px">
                         <h3>JavaScript & TypeScript</h3>
                         <ul class="desc">
-                            <li>angular 2+ (1 years半)</li>
+                            <li>vue.js / angular 2+ </li>
                             <li>AJAX / JSON</li>
                             <li>RxJS</li>
                             <li>TypeScript</li>
@@ -118,6 +118,14 @@
                 <h2>Experience</h2>
                 <div class="expSectionBold">
                     <img src="images/dot-start.png" class="dotStart" alt="dot-start" width="32px" height="37px">
+                    <div class="exp-vip">
+                        <img src="images/dot-timeItem.png" class="dotTime-vip" alt="dot-timeItem" width="24px"
+                            height="28px">
+                        <div class="vip-section">
+                            <p><span>2019/10 - 仍在職</span><br /><span
+                                    class="redFont">資深前端工程師</span><br />一零四資訊科技股份有限公司<br />前端開發與切板、版控、元件共用化<p>
+                        </div>
+                    </div>
                     <div class="exp-hex">
                         <img src="images/dot-timeItem.png" class="dotTime-hex" alt="dot-timeItem" width="24px"
                             height="28px">
@@ -154,30 +162,32 @@
                 <h2 class="worksFont">Works 作品</h2>
                 <ul>
                     <li class="code-work">
-                        <a href="https://m-cali5.b2.b5k.io/login" target="_blank">
+                        <a href="https://vip.104.com.tw/" target="_blank">
                             <div>
-                                <img src="images/cali_logo_big.png" alt="code-work" width="280px" height="150px">
+                                <img src="images/logo-work-vip.PNG" alt="code-work" width="280px" height="150px">
                             </div>
-                            <span>飛騰體育投注手機板</span>
-                            <p>製作盤表、注單、賽果...等所有頁面</p>
+                            <span>VIP 104招募管理</span>
+                            <p>VIP 專案升級 2.5，進行 SPA 頁面製作</p>
                         </a>
                     </li>
                     <!-- fix: 請盡量減少方向性、編號式的命名方式，改用語意的方式來取代，例如 .work2 的部分 bmi-work -->
                     <li class="bmi-work">
-                        <a href="https://op.b2.b5k.io/login" target="_blank">
+                        <a href="https://tanji.104.com.tw/list" target="_blank">
                             <div>
-                                <img src="images/logo-work-Bkmobile.png" alt="bmi-work" width="280px" height="150px">
+                                <img src="images/logo-work-tanji.PNG" alt="bmi-work" width="280px" height="150px">
                             </div>
-                            <span>體育投注控台</span>
-                            <p>製作賽果、注單頁面與即時注單socket</p>
+                            <span>打工探吉</span>
+                            <p>使用 swiper 套件實現公司環境照</p>
                         </a>
                     </li>
                     <li class="excel-work">
-                        <div>
-                            <img src="images/logo-work-Bkweb.png" alt="excel-work" width="280px" height="150px">
-                        </div>
-                        <span>BetLink體育投注</span>
-                        <p>盤表4種切換、帳目</p>
+                        <a href="https://jessierabbit.github.io/vue-shopping/#/home" target="_blank">
+                            <div>
+                                <img src="images/logo-work-fruitables.PNG" alt="excel-work" width="280px" height="150px">
+                            </div>
+                            <span>樂月蔬果行電商前後台</span>
+                            <p>自己做的 side project 兩個前後台</p>
+                        </a>
                     </li>
                 </ul>
                 <div class="clearfix"></div>
@@ -187,7 +197,7 @@
             <h2>About 藍鵑秀</h2>
             <div class="aboutPhoto"></div>
             <p>
-                感謝貴公司百忙之中閱讀這份自製網頁履歷，我的名字叫藍鵑秀，2018年1月開始就職飛騰資訊擔任Front-End，且2017年3月任職文華資訊Front-End。展開Front-End之路前，並在2014~2017年在遊戲業擔任遊戲程式設計師，具有4年半工作經歷且6年程式設計經驗。
+                感謝貴公司百忙之中閱讀這份自傳，我的名字叫藍鵑秀，從2019年10月至今現職 104 Senior Front End，在2018年1月開始就職飛騰資訊擔任Front-End，且2017年3月任職文華資訊Front-End。展開Front-End之路前，並在2014~2017年在遊戲業擔任遊戲程式設計師，具有5年前端網頁經驗。
                 <br /><br />
                 開發這條路上，歷練無數個開發的流程與知識，具備程式碼專注品質且獨立自己凡事尋找資源的能力。<br />
                 在團隊合作中，喜歡和同事交流技術的知識與學習他人擅長的技能，培養人與人之間的信任與溝通。<br />
@@ -196,7 +206,7 @@
             <div class="clearfix"></div>
         </div>
         <div class="footer">
-            <p>© 2019 藍鵑秀. ALL RIGHTS RESERVED</p>
+            <p>© 2024 藍鵑秀. ALL RIGHTS RESERVED</p>
         </div>
     </div>
 
