--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <img src="images/dot-timeItem.png" class="dotTime-vip" alt="dot-timeItem" width="24px"
                             height="28px">
                         <div class="vip-section">
-                            <p><span>2019/10 - 仍在職</span><br /><span
+                            <p><span>2019/10 - 2025/04</span><br /><span
                                     class="redFont">資深前端工程師</span><br />一零四資訊科技股份有限公司<br />前端開發與切板、版控、元件共用化<p>
                         </div>
                     </div>
@@ -197,7 +197,7 @@
             <h2>About 藍鵑秀</h2>
             <div class="aboutPhoto"></div>
             <p>
-                感謝貴公司百忙之中閱讀這份自傳，我的名字叫藍鵑秀，從2019年10月至今現職 104 Senior Front End，在2018年1月開始就職飛騰資訊擔任Front-End，且2017年3月任職文華資訊Front-End。展開Front-End之路前，並在2014~2017年在遊戲業擔任遊戲程式設計師，具有5年前端網頁經驗。
+                感謝貴公司百忙之中閱讀這份自傳，我的名字叫藍鵑秀，從2019年10月~2025年4月前職 104 Senior FrontEnd，在2018年1月開始就職飛騰資訊擔任 FrontEnd，具有5~6年前端網頁經驗。
                 <br /><br />
                 開發這條路上，歷練無數個開發的流程與知識，具備程式碼專注品質且獨立自己凡事尋找資源的能力。<br />
                 在團隊合作中，喜歡和同事交流技術的知識與學習他人擅長的技能，培養人與人之間的信任與溝通。<br />
